--- a/BackFight/app/src/main/AndroidManifest.xml
+++ b/BackFight/app/src/main/AndroidManifest.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.studio.jarn.backfight" >
+    package="com.studio.jarn.backfight">
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".MainMenuActivity"
+            android:name=".GameActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="userLandscape"
-            android:theme="@style/FullscreenTheme">
+            android:theme="@style/FullscreenTheme" />
+        <activity
+            android:name=".MainMenuActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="userLandscape"
+            android:theme="@style/FullscreenMenuTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,12 +28,31 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.studio.jarn.backfight.GameActivity"
+            android:name=".SettingsActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name"
             android:screenOrientation="userLandscape"
-            android:theme="@style/FullscreenTheme">
-        </activity>
+            android:theme="@style/FullscreenMenuTheme" />
+        <activity
+            android:name=".RulesActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="userLandscape"
+            android:theme="@style/FullscreenMenuTheme" />
+        <activity
+            android:name=".LoadGameActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="userLandscape"
+            android:theme="@style/FullscreenMenuTheme" />
+        <activity
+            android:name=".NewGameActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="userLandscape"
+            android:theme="@style/FullscreenMenuTheme" />
+
+        <activity
+            android:name=".LobbyActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="userLandscape"
+            android:theme="@style/FullscreenMenuTheme" />
     </application>
 
 </manifest>
