--- a/BackFight/app/src/main/AndroidManifest.xml
+++ b/BackFight/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="userLandscape"
-            android:theme="@style/FullscreenTheme" />
+            android:theme="@style/FullscreenGameTheme" />
         <activity
             android:name=".MainMenuActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
