--- a/BackFight/app/src/main/AndroidManifest.xml
+++ b/BackFight/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.studio.jarn.backfight">
 
+    <!-- Credit for Icon: http://raindropmemory.deviantart.com-->
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
