--- a/WeatherAarhusgroup07/app/src/main/AndroidManifest.xml
+++ b/WeatherAarhusgroup07/app/src/main/AndroidManifest.xml
@@ -26,12 +26,7 @@
         <service
             android:name=".WeatherService"
             android:enabled="true"
-            android:exported="true"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
-            <intent-filter>
-                <action android:name="android.accessibilityservice.AccessibilityService" />
-            </intent-filter>
-        </service>
+            android:exported="true"></service>
     </application>
 
 </manifest>
