Refactored notification classes in one package

--- a/BackFight/app/src/main/AndroidManifest.xml
+++ b/BackFight/app/src/main/AndroidManifest.xml
@@ -61,7 +61,7 @@
             android:theme="@style/FullscreenMenuTheme" />
 
         <service
-            android:name=".NotificationIntentService"
+            android:name=".Notification.NotificationIntentService"
             android:exported="false" />
     </application>
 
